[package]
name = "wasmblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
reqwasm = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
markdown = "1.0.0-alpha.16"
pulldown-cmark = "0.9.3"
js-sys = "0.3.66"
futures = "0.3.29"
# katex = { version = "0.4.6", default-features = false, features = ["quick-js"] }

[[bin]]
name = "convert"
path = "src/convert.rs"
